--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
+    "js-cookie": "^2.1.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
