--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
     "react": "^15.4.1",
