--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dev-utils": "^0.4.2",
     "react-hot-loader": "^1.3.1",
     "recursive-readdir": "2.1.0",
+    "redux-logger": "^2.7.4",
     "sass-loader": "^4.1.1",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
