--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "soundcloud": "^3.1.2"
+    "soundcloud": "^3.1.2",
+    "waveform.js": "^1.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
