--- a/.eslintrc
+++ b/.eslintrc
@@ -1,33 +1,96 @@
 {
-    "extends": "airbnb",
-    "rules": {
-        "react/prop-types": 0,
-        "react/jsx-no-bind": 0,
-        "camelcase": 0,
-        "default-case": 0,
-        "comma-dangle": 0,
-        "consistent-return": 0,
-        "no-new": 0,
-        "prefer-template": 0,
-        "quotes": 0,
-        "new-cap": 0,
-        "no-else-return": 0,
-        "semi": 0,
-        "max-len": [1, 120, 2, {
-            "ignoreComments": true
+  "extends": "airbnb",
+  "rules": {
+    "react/prop-types": 0,
+    "react/jsx-no-bind": 0,
+    "camelcase": 0,
+    "default-case": 0,
+    "comma-dangle": 0,
+    "consistent-return": 0,
+    "no-new": 0,
+    "prefer-template": 0,
+    "quotes": 0,
+    "new-cap": 0,
+    "no-else-return": 0,
+    "semi": 0,
+    "max-len": [1, 120, 2, {
+      "ignoreComments": true
         }],
-        "no-unused-expressions":"off",
-        "arrow-body-style":"off",
-        "prefer-const":["error",{
-             "destructuring": "any",
-             "ignoreReadBeforeAssign": false
+    "no-unused-expressions": "off",
+    "arrow-body-style": "off",
+    "prefer-const": ["error", {
+      "destructuring": "any",
+      "ignoreReadBeforeAssign": false
         }],
-        "one-var":"off",
-        "no-underscore-dangle":"off",
-        "global-require":"off",
-        "no-console":"off"
-    },
-    "react/display-name": [0, {
-        "ignoreTranspilerName": true
-    }]
+    "one-var": "off",
+    "no-underscore-dangle": "off",
+    "global-require": "off",
+    "no-console": "off",
+    "flowtype/boolean-style": [
+      2,
+      "boolean"
+    ],
+    "flowtype/define-flow-type": 1,
+    "flowtype/delimiter-dangle": [
+      2,
+      "never"
+    ],
+    "flowtype/generic-spacing": [
+      2,
+      "never"
+    ],
+    "flowtype/no-primitive-constructor-types": 0,
+    "flowtype/no-weak-types": 2,
+    "flowtype/object-type-delimiter": [
+      0,
+      "comma"
+    ],
+    "flowtype/require-parameter-type": 2,
+    "flowtype/require-return-type": [
+      2,
+      "always",
+      {
+        "annotateUndefined": "never"
+      }
+    ],
+    "flowtype/require-valid-file-annotation": 2,
+    "flowtype/semi": [
+      2,
+      "always"
+    ],
+    "flowtype/space-after-type-colon": [
+      2,
+      "always"
+    ],
+    "flowtype/space-before-generic-bracket": [
+      2,
+      "never"
+    ],
+    "flowtype/space-before-type-colon": [
+      2,
+      "never"
+    ],
+    "flowtype/type-id-match": [
+      2,
+      "^([A-Z][a-z0-9]+)+Type$"
+    ],
+    "flowtype/union-intersection-spacing": [
+      2,
+      "always"
+    ],
+    "flowtype/use-flow-type": 1,
+    "flowtype/valid-syntax": 1
+  },
+  "settings": {
+    "flowtype": {
+      "onlyFilesWithFlowAnnotation": true
+    }
+  },
+  "react/display-name": [0, {
+    "ignoreTranspilerName": true
+    }],
+  "parser": "babel-eslint",
+  "plugins": [
+    "flowtype"
+  ]
 }
