--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "1.6.0",
-    "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-flowtype": "^2.21.0",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "5.0.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
+    "flow-bin": "^0.37.4",
     "fs-extra": "0.30.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
