--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
+    "react-router-scroll": "^0.4.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "soundcloud": "^3.1.2",
