--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "js-cookie": "^2.1.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
