--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.0",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
+    "es6-promise": "^4.0.5",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "1.6.0",
@@ -35,10 +37,12 @@
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "17.0.2",
     "json-loader": "0.5.4",
     "mocha": "^3.2.0",
     "node-sass": "^4.1.1",
+    "normalizr": "^3.0.2",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
@@ -59,6 +63,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.1.3",
+    "node-fetch": "^1.6.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
@@ -73,7 +78,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "NODE_ENV=test mocha --compilers  js:babel-core/register --require babel-polyfill ./tests/setup.js 'tests/**/*.test.@(js|jsx)'"
+    "test": "NODE_ENV=test mocha --timeout 2000  --compilers  js:babel-core/register --require babel-polyfill ./tests/setup.js 'tests/**/*.test.@(js|jsx)'"
   },
   "jest": {
     "collectCoverageFrom": [
