--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2",
+    "webpack-dev-server": "^1.16.2",
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "1.0.0"
   },
@@ -72,6 +72,7 @@
     "react-router-scroll": "^0.4.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
+    "rn-redux-mixpanel": "^1.1.9",
     "soundcloud": "^3.1.2",
     "waveform.js": "^1.0.0"
   },
