test(reducers):browse entities  auth

--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "http-proxy-middleware": "0.17.2",
     "isomorphic-fetch": "^2.2.1",
     "jest": "17.0.2",
+    "jsdom": "^9.9.1",
     "json-loader": "0.5.4",
     "mocha": "^3.2.0",
+    "moment": "^2.17.1",
     "node-sass": "^4.1.1",
     "normalizr": "^3.0.2",
     "object-assign": "4.1.0",
@@ -79,7 +81,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "NODE_ENV=test mocha --timeout 2000  --compilers  js:babel-core/register --require babel-polyfill ./tests/setup.js 'tests/**/*.test.@(js|jsx)'"
+    "test": "NODE_ENV=test mocha --timeout 2000  --compilers  js:babel-core/register --require babel-polyfill ./tests/setup.js 'tests/**/*.test.@(js|jsx)'",
+    "test-r": "NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill ./tests/setup.js 'src/**/*.spec.@(js|jsx)'"
   },
   "jest": {
     "collectCoverageFrom": [
