--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest": "17.0.2",
     "jsdom": "^9.9.1",
     "json-loader": "0.5.4",
+    "lodash-fp": "^0.10.4",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "node-sass": "^4.1.1",
