--- a/.flowconfig
+++ b/.flowconfig
@@ -1,7 +1,8 @@
 [ignore]
-.*node_modules/fbjs.*
+.*node_modules/**.*
 [include]
 ./src/*
 [libs]
 ./decls
 [options]
+module.system.node.resolve_dirname=src
