--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lodash-fp": "^0.10.4",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
+    "nock": "^9.0.2",
     "node-sass": "^4.1.1",
     "normalizr": "^3.0.2",
     "object-assign": "4.1.0",
@@ -55,6 +56,7 @@
     "react-hot-loader": "^1.3.1",
     "recursive-readdir": "2.1.0",
     "redux-logger": "^2.7.4",
+    "redux-mock-store": "^1.2.1",
     "sass-loader": "^4.1.1",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
