feat(test) istanbul

--- a/.eslintrc
+++ b/.eslintrc
@@ -124,6 +124,11 @@
     "describe": true,
     "it": true,
     "expect": true,
+    "shallow": true,
+    "React": true,
+    "mount": true,
+    "render": true,
+    "SC": true,
     "fetch": true,
     "assert": true,
     "beforeEach": true,
