--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
     "connect-history-api-fallback": "1.3.0",
@@ -22,6 +23,7 @@
     "css-loader": "0.26.0",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
+    "enzyme": "^2.7.0",
     "es6-promise": "^4.0.5",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
@@ -39,6 +41,7 @@
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
     "isomorphic-fetch": "^2.2.1",
+    "istanbul": "^1.0.0-alpha.2",
     "jest": "17.0.2",
     "jsdom": "^9.9.1",
     "json-loader": "0.5.4",
@@ -52,6 +55,7 @@
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
+    "react-addons-test-utils": "^15.4.2",
     "react-dev-utils": "^0.4.2",
     "react-hot-loader": "^1.3.1",
     "recursive-readdir": "2.1.0",
@@ -86,7 +90,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "NODE_ENV=test mocha --timeout 2000  --compilers  js:babel-core/register --require babel-polyfill ./tests/setup.js 'tests/**/*.test.@(js|jsx)'",
-    "test-r": "NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill ./tests/setup.js 'src/**/*.spec.@(js|jsx)'"
+    "test-r": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- --compilers js:babel-core/register --require babel-polyfill --colors ./tests/setup.js 'src/**/*.spec.@(js|jsx)'"
   },
   "jest": {
     "collectCoverageFrom": [
